[tool.poetry]
name = "triple-net-diagnosis"
version = "0.1.0"
description = "A novel circRNA-miRNA-mRNA network identifies circ-YOD1 as a biomarker for coronary artery disease (CAD)."
authors = ["cabernet.rock@gmail.com"]

[tool.poetry.dependencies]
python  = "^3.7.3"
numpy   = "^1.13.3"
pandas  = "^1.0.3"
seaborn = "^0.10.0"
plotly  = "^4.5.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"